--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
-.footer {
-  background-color: red;
+.page-header {
+  border: 2px solid #ececec;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.page-header {
+  background: #2f303a;
 }
 /*# sourceMappingURL=main.css.map */
