--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -1,5 +1,3 @@
-%page-header {
-    border: 2px solid #ececec;
-    margin-right: auto;
-    margin-left: auto;
-  }
+%list {
+  list-style: none;
+}
