--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -113,7 +113,7 @@ a:focus {
   list-style: none;
 }
 
-.site-nav, .personal, .principe {
+.site-nav, .personal {
   list-style: none;
 }
 
@@ -296,98 +296,4 @@ a:focus {
   outline: none;
   color: #2196f3;
 }
-
-.hero {
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/bg1.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/bg1.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #2f303a;
-}
-
-.hero__title {
-  margin-top: 200x;
-  margin-bottom: 30px;
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-
-.hero__btn {
-  padding: 10px 32px;
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  color: #ffffff;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.principles {
-  padding-bottom: 0;
-}
-
-.principe__item {
-  width: calc((100% - 90px) / 4);
-}
-
-.principe__item::before {
-  display: block;
-  content: '';
-  height: 120px;
-  background-color: #f5f4fa;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-bottom: 30px;
-  color: red;
-}
-
-.principe__item--mright {
-  margin-right: 30px;
-}
-
-.principe__title {
-  margin-bottom: 10px;
-  color: #212121;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.principe__text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: #757575;
-  text-decoration: none;
-  text-transform: none;
-}
-
-.principe__item--sputnic::before {
-  background-image: url(/images/sputnic.png);
-}
-
-.principe__item--clock::before {
-  background-image: url(/images/clock.png);
-}
-
-.principe__item--pc::before {
-  background-image: url(/images/pc.png);
-}
-
-.principe__item--cosmonaut::before {
-  background-image: url(/images/cosmonaut.png);
-}
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=portfolio.css.map */
