--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -2,3 +2,5 @@
 @import './utils/global';
 @import './utils/placeholder';
 @import './components/header';
+@import './components/portfolio-main';
+@import './components/footer';
