--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,10 @@
 @import './components/hero';
 @import './components/principles';
 @import './components/our-work';
+@import './components/team'; 
+@import './components/clients';
+@import './components/hero-modal';
+@import './components/footer'; 
+
+
+
