--- a/css/main.css
+++ b/css/main.css
@@ -725,28 +725,28 @@ a:focus {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: rgba(161, 46, 46, 0.5);
+  color: #757575;
 }
 
 .callback-form-field__textarea:-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: rgba(161, 46, 46, 0.5);
+  color: #757575;
 }
 
 .callback-form-field__textarea::-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: rgba(161, 46, 46, 0.5);
+  color: #757575;
 }
 
 .callback-form-field__textarea::placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: rgba(161, 46, 46, 0.5);
+  color: #757575;
 }
 
 .callback-form-license {
@@ -791,7 +791,7 @@ a:focus {
 
 .callback-form-license__check-original:checked + .callback-form-license__check-custom {
   border-color: #2196f3;
-  background-image: url(/images/sprite.svg#icon-icon-check);
+  background-image: url(/images/check-full.svg);
   background-size: contain;
   background-origin: border-box;
 }
