--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/bg1.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: $mainBgColor;
