--- a/sass/components/_principles.scss
+++ b/sass/components/_principles.scss
@@ -46,17 +46,17 @@
 }
 
 .principe__item--sputnic::before {
-  background-image: url(/images/sputnic.png);
+  background-image: url(../images/sputnic.png);
 }
 
 .principe__item--clock::before {
-  background-image: url(/images/clock.png);
+  background-image: url(../images/clock.png);
 }
 
 .principe__item--pc::before {
-  background-image: url(/images/pc.png);
+  background-image: url(../images/pc.png);
 }
 
 .principe__item--cosmonaut::before {
-  background-image: url(/images/cosmonaut.png);
+  background-image: url(../images/cosmonaut.png);
 }
